fix overflow x scrollable

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,6 +18,9 @@
     --foreground: #ededed;
   }
 }
+html, body {
+  overflow-x: hidden;
+}
 
 html {
   scroll-behavior: smooth;
